--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,14 @@
     "license": "MIT",
     "keywords": [
         "zf",
-        "octicons"
+        "github",
+        "octicons",
+        "svg"
     ],
     "homepage": "https://github.com/161/octicons-view-helper",
     "require": {
-        "php": "^7.0 || ^5.6",
+        "php": "^7.0",
+        "zendframework/zend-json": "^3.0 || ^2.6",
         "zendframework/zend-view": "^2.6"
     },
     "require-dev": {
