--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^7.0",
         "zendframework/zend-json": "^3.0 || ^2.6",
+        "zendframework/zend-servicemanager": "^3.0",
         "zendframework/zend-view": "^2.6"
     },
     "require-dev": {
@@ -22,6 +23,9 @@
         }
     },
     "scripts": {
+        "post-autoload-dump": [
+            "@test"
+        ],
         "test": "phpunit --colors=always"
     }
 }
