--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- <phpunit bootstrap="vendor/autoload.php" colors="true"> -->
-<phpunit bootstrap="../../autoload.php" colors="true">
+<phpunit bootstrap="vendor/autoload.php" colors="true">
+<!-- <phpunit bootstrap="../../autoload.php" colors="true"> -->
     <testsuites>
         <testsuite name="Io161 - Octicons\\Tests">
             <directory>test</directory>
