--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "zendframework/zend-view": "^2.6"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "^6.0 || ^5.7"
+        "phpunit/phpunit": "^6.0 || ^5.7"
     },
     "autoload": {
         "psr-4": {
